# bambi

./: #README.md#  .Rbuildignore  .file.py.swp  .gitignore  .gitmodules  .travis.yml  1  CMakeLists.txt  DESCRIPTION  Dockerfile  Makefile  Makefile~  NAMESPACE  README.md  bam5.awk  bxbam  bxbam.R  bxbam.awk  bxbam.py  bxbam2.R  bxbam_functions.py  bxbam_script.R  columns.txt  config.status  configure  configure.ac  correct_bx.R  create_bxbam.py  file.py  headered.bam  headered.sam  queryResults.txt  requirements.txt  zzz.R
10x_h5_scripts/: convert_to_hdf5_IMI1.py  convert_to_hdf5_IMI1_correct.py  convert_to_hdf5_IMI2.py  convert_to_hdf5_IMI2_correct.py  convert_to_hdf5_IMI3.py  convert_to_hdf5_IMI3_correct.py
R/: R6_class.R  README.md  RcppExports.R  bxbam.R  rcpp_necessity.R  utils.R  zzz.R
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
bamdb/: #bamdb.c#  .#bamdb.c  .gitignore  LICENSE  Makefile  bamdb.c  configure
bamdb/include/: bam_api.h  bam_lmdb.h  bam_lmdb.h~  bam_sqlite.h  bamdb.h  bamdb_c.h
bamdb/src/: bam_api.c  bam_lmdb.c  bam_sqlite.c
ck/: Makefile
ck/doc/: Makefile
ck/include/: ck_md.h
ck/src/: Makefile
cmake/: FindCK.cmake
htslib/: Makefile  bgzf.pico  bgzip  config.h  config.h.in  config.mk  config.status  configure  errmod.pico  faidx.pico  hfile.pico  hfile_net.pico  hts.pico  htsfile  kfunc.pico  knetfile.pico  kstring.pico  md5.pico  multipart.pico  probaln.pico  realn.pico  regidx.pico  sam.pico  synced_bcf_reader.pico  tabix  tbx.pico  textutils.pico  thread_pool.pico  vcf.pico  vcf_sweep.pico  vcfutils.pico
htslib/autom4te.cache/: output.0  traces.0
htslib/cram/: cram_codecs.pico  cram_decode.pico  cram_encode.pico  cram_external.pico  cram_index.pico  cram_io.pico  cram_samtools.pico  cram_stats.pico  files.pico  mFILE.pico  open_trace_file.pico  pooled_alloc.pico  rANS_static.pico  sam_header.pico  string_alloc.pico  vlen.pico  zfio.pico
htslib/htslib/: sam.h
htslib/test/: fieldarith  hfile  sam  test-regidx  test-vcf-api  test-vcf-sweep  test_view
include/: bamdb.h  bamdb_index_writer.h
lmdb/libraries/liblmdb/: Makefile
man/: bambi-package.Rd  bambi.Rd  bxBam.Rd  check_index.Rd  internal.Rd  parse_outputs.Rd  query_bam_index.Rd
pandas_indexing/: hdf5_df_IMI-1.py  hdf5_df_IMI-2.py  hdf5_df_IMI-3.py
sqlite3/: Makefile  config.status  libtool  sqlite3.h
sqlite3/.deps/: sqlite3-shell.Po  sqlite3-sqlite3.Po  sqlite3.Plo
sqlite3/.libs/: libsqlite3.so.0.8.6
sqlite3/autom4te.cache/: output.0
src/: Dockerfile  Makefile  Makevars  RcppExports.cpp  RcppExports.gcda  bam_api.c  bam_lmdb.c  bambi.cpp  bambi.gcda  bamdb.c  bamdb_index_writer.c  bamdb_lmdb.c  bamdb_main.c  bamdbr.cpp  bxBam.cc  bxBam.cpp  symbols.rds
src/bamdb/: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE
src/bamdb/cmake/: FindHTSlib.cmake  FindLMDB.cmake
src/bamdb/include/: bam_api.h  bam_lmdb.h  bamdb.h  bamdb_index_writer.h  bamdb_lmdb.h  bamdb_status.h
src/bamdb/src/: bam_api.c  bam_lmdb.c  bamdb.c  bamdb_index_writer.c  bamdb_main.c
src/htslib/: Makefile  bgzip  htsfile  libhts.dylib  tabix
src/htslib-1.3/: bgzip  config.status  htsfile  libhts.dylib  tabix
src/htslib-1.3/test/: fieldarith  hfile  sam  test-regidx  test-vcf-api  test-vcf-sweep  test_view
src/htslib/test/: fieldarith  hfile  hts_endian  sam  test-bcf-sr  test-bcf-translate  test-regidx  test-vcf-api  test-vcf-sweep  test_bgzf  test_realn  test_view
src/include/: bam_api.h  bam_lmdb.h
tests/: testthat.R
tests/testthat/: subsetHCC1143_phased_possorted0001.bam.bai  subset_HCC1143_phased_possorted000005.EnsemblStyle.PS.bam.bai  subset_HCC1143_phased_possorted000005.PS.bam  subset_HCC1143_phased_possorted000005.UCSCstyle.PS.bam  subset_HCC1143_phased_possorted000005.bam.bai  subset_pbmc8k_possorted_genome_bam000025.UB.bam  subset_pbmc8k_possorted_genome_bam000025.UB.bam.bai  subset_pbmc8k_possorted_genome_bam000025.UCSCstyle.CB.bam  subset_pbmc8k_possorted_genome_bam000025.UCSCstyle.UB.bam  subset_pbmc8k_possorted_genome_bam000025.UCSCstyle.UB.bam.bai  test_bambi_ops.R  test_bxbam.R
tests/testthat/subsetHCC1143_phased_possorted0001_lmdb/CB/: data.mdb
tests/testthat/subset_HCC1143_phased_possorted000005.EnsemblStyle.PS_lmdb/PS/: data.mdb
tests/testthat/subset_HCC1143_phased_possorted000005.EnsemblStyle.PS_lmdb/QNAME/: data.mdb
tests/testthat/subset_HCC1143_phased_possorted000005.PS_lmdb/PS/: data.mdb
tests/testthat/subset_HCC1143_phased_possorted000005_lmdb/BX/: data.mdb
tests/testthat/subset_HCC1143_phased_possorted000005_lmdb/QNAME/: data.mdb
tests/testthat/subset_pbmc8k_possorted_genome_bam000025.CB_lmdb/CB/: data.mdb
tests/testthat/subset_pbmc8k_possorted_genome_bam000025.CB_lmdb/QNAME/: data.mdb
tests/testthat/subset_pbmc8k_possorted_genome_bam000025.UB_lmdb/UB/: data.mdb
tests/testthat/subset_pbmc8k_possorted_genome_bam000025.UCSCstyle.CB_lmdb/CB/: data.mdb
tests/testthat/subset_pbmc8k_possorted_genome_bam000025.UCSCstyle.UB_lmdb/QNAME/: data.mdb
tests/testthat/subset_pbmc8k_possorted_genome_bam000025.UCSCstyle.UB_lmdb/UB/: data.mdb
